--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -18,7 +18,8 @@ NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 #  The file is to be placed under models/xmi directory.
 ##################################################################################
 XMI_FILE=sdk.xmi
-
+LOGICAL_MODEL=Logical View.Logical Model
+DATA_MODEL=Logical View.Data Model
 
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
