--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -20,7 +20,8 @@ NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 XMI_FILE=sdk.xmi
 LOGICAL_MODEL=Logical View.Logical Model
 DATA_MODEL=Logical View.Data Model
-
+INCLUDE_PACKAGE=domain
+EXCLUDE_PACKAGE=
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
 # 
