Added Javadocs in the generated beans
SVN-Revision: 746

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -13,6 +13,7 @@ codegen.config.file=CodegenConfig.xml
 build.dir=${output.project.dir}/build
 build.classes.dir=${build.dir}/classes
 build.jar.dir=${build.dir}/jar
+build.doc.dir=${build.dir}/docs
 
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
