--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -21,7 +21,7 @@ XMI_FILE=sdk.xmi
 LOGICAL_MODEL=Logical View.Logical Model
 DATA_MODEL=Logical View.Data Model
 INCLUDE_PACKAGE=domain
-EXCLUDE_PACKAGE=
+EXCLUDE_PACKAGE=sametableleaflevel
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
 # 
