--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -45,6 +45,15 @@ DB_PASSWORD=c0r3ga!
 DB_DIALECT=org.hibernate.dialect.Oracle9Dialect
 
 ##################################################################################
+#  WEB SERVICE PROPERTIES
+#
+#  Value of the WEBSERVICE_NAME property will be used to create:
+#		1)deploy.wssd
+#		2)
+##################################################################################
+WEBSERVICE_NAME=exampleService
+
+##################################################################################
 #  ADVANCED PROPERTIES
 # 
 #  CACHE_PATH is being used by the EHCache to store its cache files on disk
