--- a/SDK4/.classpath
+++ b/SDK4/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="codegen/core/src"/>
 	<classpathentry kind="src" path="codegen/templates/build/src"/>
 	<classpathentry kind="src" path="output/example/conf/codegen"/>
+	<classpathentry kind="src" path="system/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="codegen/core/lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="codegen/core/lib/dom4j-1.4.jar"/>
@@ -12,5 +13,18 @@
 	<classpathentry kind="lib" path="codegen/core/lib/xmi.in.out.jar"/>
 	<classpathentry kind="lib" path="codegen/core/lib/jaxen-core.jar"/>
 	<classpathentry kind="lib" path="codegen/core/lib/jaxen-jdom.jar"/>
+	<classpathentry kind="lib" path="system/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="system/lib/asm.jar"/>
+	<classpathentry kind="lib" path="system/lib/c3p0-0.9.0.jar"/>
+	<classpathentry kind="lib" path="system/lib/cglib-2.1.3.jar"/>
+	<classpathentry kind="lib" path="system/lib/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="system/lib/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="system/lib/dom4j-1.4.jar"/>
+	<classpathentry kind="lib" path="system/lib/ehcache-1.2.2.jar"/>
+	<classpathentry kind="lib" path="system/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="system/lib/jta.jar"/>
+	<classpathentry kind="lib" path="system/lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="system/lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="system/lib/spring.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
