Added script to create respective packages
SVN-Revision: 826

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -1,4 +1,5 @@
 codegen.dir=codegen
+system.dir=system
 
 output.dir=output
 output.project.dir=${output.dir}/${PROJECT_NAME}
@@ -14,6 +15,13 @@ build.dir=${output.project.dir}/build
 build.classes.dir=${build.dir}/classes
 build.jar.dir=${build.dir}/jar
 build.doc.dir=${build.dir}/docs
+
+package.dir=${output.project.dir}/package
+package.client.remote.dir=${package.dir}/remote-client
+package.client.remote.lib.dir=${package.client.remote.dir}/lib
+package.client.local.dir=${package.dir}/local-client
+package.client.local.lib.dir=${package.client.local.dir}/lib
+package.system.dir=${package.dir}/webapp
 
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
