--- a/SDK4/conf/system/web/WEB-INF/web.xml
+++ b/SDK4/conf/system/web/WEB-INF/web.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<context-param>
-       	<param-name>cacoreBeans.Properties</param-name>
-		<param-value>cacoreBeans.properties</param-value>
-	</context-param>
-	
+
 	<context-param>
 	    <param-name>cacoreFormat.xsl</param-name>
-		<param-value>xslt/cacoreFormat2.xsl</param-value>
+		<param-value>xslt/cacoreFormat.xsl</param-value>
 	</context-param>
 	<context-param>
 		<param-name>rowCounter</param-name>
