added system compilation
SVN-Revision: 853

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -7,6 +7,12 @@ output.src.dir=${output.project.dir}/src
 
 conf.dir=conf
 codegen.config.dir=${conf.dir}/codegen
+
+system.config.dir=${conf.dir}/system
+system.config.client.local.dir=${system.config.dir}/package/local-client
+system.config.client.remote.dir=${system.config.dir}/package/remote-client
+system.config.client.webapp.dir=${system.config.dir}/package/webapp
+
 output.conf.dir=${output.project.dir}/conf
 output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
 codegen.config.file=CodegenConfig.xml
