Defect fix for the client server communication to work appropriately
SVN-Revision: 859

--- a/SDK4/conf/system/package/local-client/build.xml
+++ b/SDK4/conf/system/package/local-client/build.xml
@@ -15,6 +15,7 @@
 		<fileset dir="${lib.dir}">
 			<include name="**/*.jar"/>
 		</fileset>
+		<pathelement path="${conf.dir}"/>
 		<pathelement path="${build.dir}"/>
 	</path>
 	
