Changed the database to the CACORESDK_ANT server
SVN-Revision: 863

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -39,8 +39,8 @@ DB_JNDI_URL=
 
 DB_DRIVER=oracle.jdbc.driver.OracleDriver
 DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
-DB_USERNAME=CACORESDK_QA
-DB_PASSWORD=c0r3ga!
+DB_USERNAME=CACORESDK_ANT
+DB_PASSWORD=c0r3nt!
 
 DB_DIALECT=org.hibernate.dialect.Oracle9Dialect
 
