SDK 4.0 System Integration changes
SVN-Revision: 868

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -4,6 +4,7 @@ system.dir=system
 output.dir=output
 output.project.dir=${output.dir}/${PROJECT_NAME}
 output.src.dir=${output.project.dir}/src
+output.conf.dir=${output.project.dir}/conf
 
 conf.dir=conf
 codegen.config.dir=${conf.dir}/codegen
@@ -18,6 +19,8 @@ output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
 codegen.config.file=CodegenConfig.xml
 
 build.dir=${output.project.dir}/build
+build.conf.system.web.dir=${output.conf.dir}/system/web
+build.conf.web-inf.dir=${build.conf.system.web.dir}/WEB-INF
 build.classes.dir=${build.dir}/classes
 build.jar.dir=${build.dir}/jar
 build.doc.dir=${build.dir}/docs
