--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -241,14 +241,20 @@
 
 	<target name="package-webapp" depends="package-codegen-artifacts">
 		<SDKecho message="${ant.project.name}: Packaging the webapp"/>
-		<war destfile="${package.system.dir}\${PROJECT_NAME}.war" webxml="">
+		<war destfile="${package.system.dir}\${PROJECT_NAME}.war" webxml="${build.conf.web-inf.dir}\web.xml">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
 			</manifest>
-			<lib dir="${system.dir}\${system.dist.dir}" includes="*.jar"/>
+			<lib dir="${system.dir}\${system.dist.dir}" includes="*.jar" excludes="servlet.jar" />
 			<lib dir="${build.jar.dir}" includes="${bean.file}" />
 			<lib dir="${build.jar.dir}" includes="${orm.file}" />
-			<fileset dir="${system.dir}\${system.web.dir}"/>
+			<fileset dir="${build.conf.system.web.dir}">
+				<include name="**/*"/>
+				<exclude name="**/web.xml"/>
+			</fileset>
+			<fileset dir="${system.dir}\${system.web.dir}">
+				<include name="**/*"/>
+			</fileset>
 			<fileset dir="${build.dir}">
 				<include name="docs/**/*"/>
 			</fileset>
