--- a/SDK4/conf/system/web/WEB-INF/web.xml
+++ b/SDK4/conf/system/web/WEB-INF/web.xml
@@ -2,26 +2,9 @@
 <web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
 	<context-param>
-	    <param-name>cacoreFormat.xsl</param-name>
-		<param-value>/WEB-INF/cacoreFormat.xsl</param-value>
-	</context-param>
-	<context-param>
-		<param-name>rowCounter</param-name>
-		<param-value>200</param-value>
-	</context-param>
-	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml</param-value>
+		<param-value>/WEB-INF/classes/application-config.xml</param-value>
 	</context-param>
-
-	<filter>
-		<filter-name>CSMHTTPFilter</filter-name>
-		<!--  
-		<display-name>CSMHTTPFilter</display-name>
-		<description></description>
-		-->
-		<filter-class>gov.nih.nci.system.proxy.CSMHTTPFilter</filter-class>
-	</filter>
 
 	<filter> 
 		<filter-name>struts2</filter-name> 
@@ -30,49 +13,26 @@
         	<param-name>actionPackages</param-name>
         	<param-value>gov.nih.nci.system.struts.action</param-value>
         </init-param>
-		
 	</filter> 
-
-	<filter-mapping>
-		<filter-name>CSMHTTPFilter</filter-name>
-		<url-pattern>/GetXML</url-pattern>
-	</filter-mapping>
-    
-	<filter-mapping>
-		<filter-name>CSMHTTPFilter</filter-name>
-		<url-pattern>/GetHTML</url-pattern>
-	</filter-mapping>
 
 	<filter-mapping> 
 		<filter-name>struts2</filter-name> 
 		<url-pattern>/*</url-pattern> 
 	</filter-mapping> 
-<!--
-	<listener> 
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
-	</listener> 
---> 	
+
 <!-- 
         This typically isn't required, as the taglib is included in struts-core.jar.
         If you really need a taglib configuration within web.xml,
         copy struts2-core/core/src/main/resources/META-INF/struts-tags.tld
         to the WEB-INF directory as struts-tags.tld.
-     
 --> 
 <!-- 
 taglib>
         <taglib-uri>/s</taglib-uri>
         <taglib-location>/WEB-INF/struts-tags.tld</taglib-location>
     </taglib
---> 
-	<servlet>
-		<servlet-name>sdkstartup</servlet-name>
-		<servlet-class>
-			gov.nih.nci.common.util.WebStartupUtil
-		</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-
+ 
+-->
 	<servlet>
 		<servlet-name>context</servlet-name>
 		<servlet-class>
@@ -81,14 +41,6 @@ taglib>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<servlet>
-		<servlet-name>httpinvoker</servlet-name>
-		<servlet-class>
-			org.springframework.web.servlet.DispatcherServlet
-		</servlet-class>
-		<load-on-startup>3</load-on-startup>
-	</servlet>	
-    
     <servlet>
         <servlet-name>AxisServlet</servlet-name>
         <servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class> 
@@ -96,24 +48,13 @@ taglib>
 
     <servlet>
         <servlet-name>GetXML</servlet-name>
-        <servlet-class>gov.nih.nci.system.proxy.HTTPQuery</servlet-class>        	
+        <servlet-class>gov.nih.nci.system.web.HTTPQuery</servlet-class>        	
     </servlet>
 
     <servlet>
     	<servlet-name>GetHTML</servlet-name>
-    	<servlet-class>gov.nih.nci.system.proxy.HTTPQuery</servlet-class>        	
+    	<servlet-class>gov.nih.nci.system.web.HTTPQuery</servlet-class>        	
     </servlet>
-
-    <servlet>
-    	<servlet-name>Happy</servlet-name>
-		<jsp-file>/Happy.jsp</jsp-file>     	
-    </servlet>
-    
-	<servlet-mapping>
-		<servlet-name>httpinvoker</servlet-name>
-		<url-pattern>/http/*</url-pattern>
-	</servlet-mapping>
-    
     
     <servlet-mapping>
         <servlet-name>AxisServlet</servlet-name>
@@ -126,11 +67,6 @@ taglib>
     </servlet-mapping>
     
     <servlet-mapping>
-        <servlet-name>AxisServlet</servlet-name>
-        <url-pattern>/ws/*</url-pattern>
-    </servlet-mapping>
-    
-    <servlet-mapping>
     	<servlet-name>GetXML</servlet-name>
     	<url-pattern>/GetXML</url-pattern>
     </servlet-mapping>
@@ -138,11 +74,6 @@ taglib>
     <servlet-mapping>
     	<servlet-name>GetHTML</servlet-name>
       	<url-pattern>/GetHTML</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-    	<servlet-name>Happy</servlet-name>
-      	<url-pattern>/Happy</url-pattern>
     </servlet-mapping>
 
 	<welcome-file-list>
