--- a/SDK4/system/build.xml
+++ b/SDK4/system/build.xml
@@ -73,6 +73,11 @@
 			<include name="gov/nih/nci/system/client/**/*"/>
 			<include name="gov/nih/nci/system/applicationservice/*"/>
 			<include name="gov/nih/nci/system/query/**/*"/>
+			<fileset dir="${src.dir}">
+				<include name="gov/nih/nci/system/client/**/*"/>
+				<include name="gov/nih/nci/system/applicationservice/*"/>
+				<include name="gov/nih/nci/system/query/**/*"/>
+			</fileset>
 		</jar>
 
 		<jar destfile="${dist.dir}\${file.output.core.name}" basedir="${build.classes.dir}">
@@ -82,6 +87,11 @@
 			<include name="gov/nih/nci/system/dao/**/*"/>
 			<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
 			<include name="gov/nih/nci/system/util/**/*"/>
+			<fileset dir="${src.dir}">
+				<include name="gov/nih/nci/system/dao/**/*"/>
+				<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
+				<include name="gov/nih/nci/system/util/**/*"/>
+			</fileset>
 		</jar>
 
 		<jar destfile="${dist.dir}\${file.output.web.name}" basedir="${build.classes.dir}">
@@ -89,6 +99,9 @@
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
 			</manifest>
 			<include name="gov/nih/nci/system/web/**/*"/>
+			<fileset dir="${src.dir}">
+				<include name="gov/nih/nci/system/web/**/*"/>
+			</fileset>
 		</jar>
 	
 		<jar destfile="${dist.dir}\${file.output.ws.name}" basedir="${build.classes.dir}">
@@ -96,11 +109,10 @@
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
 			</manifest>
 			<include name="gov/nih/nci/system/ws/**/*"/>
+			<fileset dir="${src.dir}">
+				<include name="gov/nih/nci/system/ws/**/*"/>
+			</fileset>
 		</jar>
-	
-		<copy todir="${dist.dir}">
-			<fileset dir="${lib.dir}" includes="*.jar"/>
-		</copy>
 	</target>
 	
 </project>
