Changed log level to INFO
SVN-Revision: 874

--- a/SDK4/conf/system/web/WEB-INF/classes/log4j.properties
+++ b/SDK4/conf/system/web/WEB-INF/classes/log4j.properties
@@ -19,10 +19,12 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
 #log4j.rootLogger=warn, stdout
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=info, stdout
 log4j.logger.org.hibernate=info
 log4j.logger.org.apache=warn
 
+log4j.category.org.apache.dbcp=info
+com.mchange.v2.c3p0=info
 ### log just the SQL
 log4j.logger.org.hibernate.SQL=debug
 
@@ -30,7 +32,7 @@ log4j.logger.org.hibernate.SQL=debug
 log4j.logger.org.hibernate.type=info
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=debug
+log4j.logger.org.hibernate.tool.hbm2ddl=info
 
 ### log cache activity ###
 #log4j.logger.org.hibernate.cache=debug
@@ -42,4 +44,4 @@ log4j.logger.org.hibernate.tool.hbm2ddl=debug
 ### leakages when using DriverManagerConnectionProvider ###
 #log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
 
-log4j.logger.gov.nih.nci=debug
+log4j.logger.gov.nih.nci=info
