--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -42,7 +42,7 @@ DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
 DB_USERNAME=CACORESDK_ANT
 DB_PASSWORD=c0r3nt!
 
-DB_DIALECT=org.hibernate.dialect.Oracle9Dialect
+DB_DIALECT=org.hibernate.dialect.OracleDialect
 
 ##################################################################################
 #  WEB SERVICE PROPERTIES
