Incorportated INCLUDE/EXCLUDE flags to have more than one values, Incorportated ArgoUML loader
SVN-Revision: 879

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -17,11 +17,14 @@ NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 #  XMI_FILE specifies the name of the file which contains the object/data model. 
 #  The file is to be placed under models/xmi directory.
 ##################################################################################
-XMI_FILE=sdk.xmi
+MODEL_FILE=sdk.xmi
+MODEL_FILE_TYPE=EA
+
 LOGICAL_MODEL=Logical View.Logical Model
 DATA_MODEL=Logical View.Data Model
 INCLUDE_PACKAGE=domain
 EXCLUDE_PACKAGE=sametableleaflevel
+EXCLUDE_NAME=
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
 # 
