--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -78,11 +78,13 @@
 		</copy>
 		<replace dir="${output.dir}">
 			<replacefilter token="@OUTPUTDIR@" value="${output.src.dir}" />
-			<replacefilter token="@XMI_FILE@" value="${XMI_FILE}" />
+			<replacefilter token="@MODEL_FILE@" value="${MODEL_FILE}" />
+			<replacefilter token="@MODEL_FILE_TYPE@" value="${MODEL_FILE_TYPE}" />
 			<replacefilter token="@LOGICAL_MODEL@" value="${LOGICAL_MODEL}" />
 			<replacefilter token="@DATA_MODEL@" value="${DATA_MODEL}" />
 			<replacefilter token="@INCLUDE_PACKAGE@" value="${INCLUDE_PACKAGE}" />
 			<replacefilter token="@EXCLUDE_PACKAGE@" value="${EXCLUDE_PACKAGE}" />
+			<replacefilter token="@EXCLUDE_NAME@" value="${EXCLUDE_NAME}" />
 			<replacefilter token="@NAMESPACE_PREFIX@" value="${NAMESPACE_PREFIX}" />	
 			<replacefilter token="@CACHE_PATH@" value="${CACHE_PATH}" />	
 			<replacefilter token="${xml.comment.start}@DB_JNDI_URL_START@${xml.comment.end}" value="${JNDI_START}" />	
